--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ button {
 body {
   font-family: "Roboto", Arial, sans-serif;
   font-size: 20px;
+  font-weight: 300;
   color: #faf0b5;
   background-color: #000000;
 }
@@ -109,7 +110,8 @@ body {
   padding: 40px 48px;
   backdrop-filter: blur(6px);
   background: rgba(238, 237, 228, 0.02);
-  border: 2px solid rgba(255, 255, 255, 0.2);
+  border: 2px solid rgba(250, 240, 181, 0.5);
+  border-radius: 8px;
 }
 .card--main {
   margin-top: -48px;
@@ -119,13 +121,15 @@ body {
   min-height: 620px;
   padding: 56px 48px;
   font-size: 88px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
 }
 
 .roles__inner {
   padding: 35px 0;
 }
 .roles__title {
-  padding: 210px 0 56px;
+  padding: 170px 0 56px;
   font-size: 64px;
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
@@ -137,23 +141,54 @@ body {
 }
 .roles__content .card {
   width: calc(50% - 12px);
+  min-height: 360px;
 }
 
-.role__title {
+.role__top {
+  display: flex;
   margin-bottom: 18px;
+  align-items: center;
+}
+.role__img img {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.role__title {
+  margin-left: 16px;
   font-size: 36px;
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
 }
 .role__info {
   font-size: 20px;
-  font-weight: 300;
   line-height: 30px;
 }
 
+.contacts__inner {
+  padding: 35px 0;
+}
 .contacts__title {
-  padding: 210px 0 56px;
+  padding: 170px 0 56px;
   font-size: 64px;
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
+}
+.contacts__info {
+  font-size: 29px;
+  line-height: 37px;
+}
+
+.footer__inner {
+  display: flex;
+  padding: 160px 0 120px;
+  flex-wrap: wrap;
+  gap: 9px 40px;
+  align-items: center;
+  line-height: 36px;
+  text-align: center;
+}
+.footer__inner div {
+  width: calc(50% - 20px);
 }
