--- a/scss/style.scss
+++ b/scss/style.scss
@@ -49,7 +49,8 @@
 	padding: 40px 48px;
 	backdrop-filter: blur(6px);
 	background: rgba(238, 237, 228, 0.02);
-	border: 2px solid rgba(255, 255, 255, 0.2);
+	border: 2px solid rgba(250, 240, 181, 0.5);
+	border-radius: 8px;
 	&--main {
 		margin-top: -48px;
 	}
@@ -59,6 +60,7 @@
 	min-height: 620px;
 	padding: 56px 48px;
 	font-size: 88px;
+	@include title-font;
 }
 
 .roles {
@@ -74,26 +76,60 @@
 		gap: 24px;
 		.card {
 			width: calc(50% - 12px);
+			min-height: 360px;
 		}
 	}
 }
 
 .role {
-	&__title {
+	&__top {
+		display: flex;
 		margin-bottom: 18px;
+		align-items: center;
+	}
+	&__img img {
+		width: 64px;
+		height: 64px;
+		border-radius: 50%;
+		overflow: hidden;
+	}
+	&__title {
+		margin-left: 16px;
 		font-size: 36px;
 		@include title-font;
 	}
 	&__info {
 		font-size: 20px;
-		font-weight: 300;
+
 		line-height: 30px;
 	}
 }
 
 .contacts {
+	&__inner {
+		padding: 35px 0;
+	}
 	&__title {
 		@include section-title;
+	}
+	&__info {
+		font-size: 29px;
+		line-height: 37px;
+	}
+}
+
+.footer {
+	&__inner {
+		display: flex;
+		padding: 160px 0 120px;
+		flex-wrap: wrap;
+		gap: 9px 40px;
+		align-items: center;
+		line-height: 36px;
+		text-align: center;
+		div {
+			width: calc(50% - 20px);
+		}
 	}
 }
 
