--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,7 +3,7 @@ $main-font: 'Roboto', Arial, sans-serif;
 $headers-font: 'Montserrat', sans-serif;
 
 $main-color: #faf0b5;
-$border-color: #abaaaa;
+$border-color: rgba(250, 240, 181, 0.5);
 $icons-color: #b9b9b9;
 $focus-color: #027bff;
 
