--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@
 @import 'global';
 
 .header {
-	border-bottom: 2px solid $main-color;
+	border-bottom: 2px solid $border-color;
 	&__inner {
 		display: flex;
 		height: 120px;
@@ -12,8 +12,15 @@
 }
 
 .logo {
+	svg {
+		width: 55px;
+		height: 55px;
+		vertical-align: -36%;
+	}
 	&__title {
-		font-size: 28px;
+		margin-left: 8px;
+		font-size: 48px;
+		@include title-font;
 	}
 }
 
@@ -49,7 +56,7 @@
 	padding: 40px 48px;
 	backdrop-filter: blur(6px);
 	background: rgba(238, 237, 228, 0.02);
-	border: 2px solid rgba(250, 240, 181, 0.5);
+	border: 2px solid $border-color;
 	border-radius: 8px;
 	&--main {
 		margin-top: -48px;
@@ -107,7 +114,7 @@
 
 .contacts {
 	&__inner {
-		padding: 35px 0;
+		padding: 35px 0 120px;
 	}
 	&__title {
 		@include section-title;
@@ -119,6 +126,7 @@
 }
 
 .footer {
+	border-top: 2px solid $border-color;
 	&__inner {
 		display: flex;
 		padding: 160px 0 120px;
@@ -129,6 +137,13 @@
 		text-align: center;
 		div {
 			width: calc(50% - 20px);
+		}
+	}
+	&__link {
+		svg {
+			width: 36px;
+			height: 36px;
+			vertical-align: -36%;
 		}
 	}
 }
