--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -69,6 +69,13 @@ body {
 	@include title-font;
 }
 
+@mixin element-decor {
+	backdrop-filter: blur(6px);
+	background: $background-color;
+	border: 2px solid $shady-main-color;
+	border-radius: 8px;
+}
+
 @mixin transition {
 	transition: 300ms all ease-in-out;
 }
