--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,17 +1,9 @@
 $main-font: 'Roboto', Arial, sans-serif;
-
 $headers-font: 'Montserrat', sans-serif;
 
 $main-color: #faf0b5;
-$border-color: rgba(250, 240, 181, 0.5);
-$icons-color: #b9b9b9;
-$focus-color: #027bff;
+$shady-main-color: rgba(250, 240, 181, 0.5);
+$background-color: rgba(238, 237, 228, 0.02);
 
-$background-grey: #e8e8e8;
-$dark-grey: #dadada;
-$superdark-grey: #757575;
-$red: red;
 $white: #fff;
 $black: #000000;
-
-$card-minwidth: 270px;
