Add fantastic space stars

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 @import 'scroll';
 @import 'global';
+@import 'space';
 
 .header {
 	border-bottom: 2px solid $shady-main-color;
