--- a/css/style.css
+++ b/css/style.css
@@ -1399,13 +1399,17 @@ body {
 }
 .header__inner {
   display: flex;
-  height: 120px;
+  min-height: 120px;
   align-items: center;
 }
 
+.logo {
+  padding: 24px 0;
+}
 .logo svg {
   width: 55px;
   height: 55px;
+  margin-left: -5px;
   vertical-align: -36%;
 }
 .logo__title {
@@ -1418,6 +1422,7 @@ body {
 .menu {
   height: 100%;
   margin-left: auto;
+  padding-top: 7px;
 }
 .menu__list {
   display: flex;
@@ -1484,6 +1489,12 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
 }
+@media (max-width: 1199px) {
+  .roles__title {
+    padding: 80px 0 48px;
+    font-size: 60px;
+  }
+}
 .roles__content {
   display: flex;
   flex-wrap: wrap;
@@ -1528,6 +1539,12 @@ body {
   font-size: 64px;
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
+}
+@media (max-width: 1199px) {
+  .contacts__title {
+    padding: 80px 0 48px;
+    font-size: 60px;
+  }
 }
 .contacts__info {
   display: flex;
@@ -1623,4 +1640,171 @@ body {
   width: 36px;
   height: 36px;
   vertical-align: -36%;
+}
+
+@media (max-width: 1199px) {
+  .header__inner {
+    display: block;
+  }
+
+  .menu {
+    padding: 0;
+  }
+  .menu__item {
+    padding-bottom: 24px;
+  }
+
+  .main__title {
+    font-size: 136px;
+  }
+
+  .card {
+    padding: 30px 36px;
+  }
+  .card--main {
+    margin-top: -32px;
+  }
+
+  .typing-area {
+    min-height: 470px;
+    padding: 42px 36px;
+    font-size: 66px;
+  }
+
+  .contacts__info-left {
+    min-width: 400px;
+  }
+  .contacts__info-offer {
+    font-size: 52px;
+  }
+}
+@media (max-width: 900px) {
+  .main__title {
+    font-size: 90px;
+  }
+
+  .card {
+    padding: 6px 16px;
+  }
+  .card--main {
+    margin-top: -26px;
+  }
+
+  .typing-area {
+    min-height: 420px;
+    padding: 36px 30px;
+    font-size: 50px;
+  }
+
+  .role {
+    padding: 12px 0;
+  }
+  .role__img img {
+    width: 42px;
+    height: 42px;
+  }
+  .role__title {
+    margin-left: 6px;
+    font-size: 28px;
+  }
+
+  .contacts__inner {
+    padding-bottom: 80px;
+  }
+  .contacts__info-left {
+    min-width: 200px;
+    font-size: 25px;
+  }
+  .contacts__info-right {
+    margin-left: 24px;
+  }
+  .contacts__info-offer {
+    font-size: 46px;
+  }
+
+  .footer__inner {
+    padding: 100px 0 80px;
+    gap: 24px;
+  }
+  .footer__inner div {
+    width: calc(50% - 12px);
+  }
+}
+@media (max-width: 600px) {
+  .logo {
+    padding-bottom: 12px;
+  }
+  .logo svg {
+    width: 48px;
+    height: 48px;
+    margin-left: -5px;
+    vertical-align: -36%;
+  }
+  .logo__title {
+    font-size: 42px;
+  }
+
+  .menu {
+    padding-bottom: 12px;
+  }
+  .menu__list {
+    display: block;
+  }
+  .menu__item {
+    padding: 12px 0;
+  }
+  .menu__item + .menu__item {
+    margin-left: 0;
+  }
+
+  .main__title {
+    font-size: 52px;
+  }
+
+  .card {
+    padding: 0;
+  }
+  .card--main {
+    margin-top: -16px;
+  }
+
+  .typing-area {
+    min-height: 270px;
+    padding: 24px 16px;
+    font-size: 32px;
+  }
+
+  .roles__content {
+    flex-direction: column;
+    align-items: stretch;
+  }
+  .roles__content .card {
+    width: 100%;
+  }
+
+  .role {
+    padding: 12px;
+  }
+
+  .contacts__info {
+    flex-direction: column;
+  }
+  .contacts__info-left {
+    margin-bottom: 24px;
+    font-size: 24px;
+  }
+  .contacts__info-right {
+    margin-left: 0;
+  }
+  .contacts__info-offer {
+    font-size: 42px;
+  }
+
+  .footer__inner {
+    padding: 80px 0 60px;
+    flex-direction: column;
+  }
+  .footer__inner div {
+    width: 100%;
+  }
 }
