--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -74,7 +74,10 @@ body {
 	padding: 170px 0 56px;
 	font-size: 64px;
 	@include title-font;
-	// @include selection;
+	@media (max-width: 1199px) {
+		padding: 80px 0 48px;
+		font-size: 60px;
+	}
 }
 
 @mixin element-decor {
