--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,5 +1,174 @@
-// @media (max-width: 1199px) {
+@media (max-width: 1199px) {
+	.header {
+		&__inner {
+			display: block;
+		}
+	}
+	.menu {
+		padding: 0;
+		&__item {
+			padding-bottom: 24px;
+		}
+	}
+	.main {
+		&__title {
+			font-size: 136px;
+		}
+	}
+	.card {
+		padding: 30px 36px;
+		&--main {
+			margin-top: -32px;
+		}
+	}
+	.typing-area {
+		min-height: 470px;
+		padding: 42px 36px;
+		font-size: 66px;
+	}
+	.contacts {
+		&__info {
+			&-left {
+				min-width: 400px;
+			}
+			&-offer {
+				font-size: 52px;
+			}
+		}
+	}
+}
 
-// }
+@media (max-width: 900px) {
+	.main {
+		&__title {
+			font-size: 90px;
+		}
+	}
+	.card {
+		padding: 6px 16px;
+		&--main {
+			margin-top: -26px;
+		}
+	}
+	.typing-area {
+		min-height: 420px;
+		padding: 36px 30px;
+		font-size: 50px;
+	}
+	.role {
+		padding: 12px 0;
+		&__img img {
+			width: 42px;
+			height: 42px;
+		}
+		&__title {
+			margin-left: 6px;
+			font-size: 28px;
+		}
+	}
+	.contacts {
+		&__inner {
+			padding-bottom: 80px;
+		}
+		&__info {
+			&-left {
+				min-width: 200px;
+				font-size: 25px;
+			}
+			&-right {
+				margin-left: 24px;
+			}
+			&-offer {
+				font-size: 46px;
+			}
+		}
+	}
+	.footer {
+		&__inner {
+			padding: 100px 0 80px;
+			gap: 24px;
+			div {
+				width: calc(50% - 12px);
+			}
+		}
+	}
+}
 
-
+@media (max-width: 600px) {
+	.logo {
+		padding-bottom: 12px;
+		svg {
+			width: 48px;
+			height: 48px;
+			margin-left: -5px;
+			vertical-align: -36%;
+		}
+		&__title {
+			font-size: 42px;
+		}
+	}
+	.menu {
+		padding-bottom: 12px;
+		&__list {
+			display: block;
+		}
+		&__item {
+			padding: 12px 0;
+		}
+		&__item + .menu__item {
+			margin-left: 0;
+		}
+	}
+	.main {
+		&__title {
+			font-size: 52px;
+		}
+	}
+	.card {
+		padding: 0;
+		&--main {
+			margin-top: -16px;
+		}
+	}
+	.typing-area {
+		min-height: 270px;
+		padding: 24px 16px;
+		font-size: 32px;
+	}
+	.roles {
+		&__content {
+			flex-direction: column;
+			align-items: stretch;
+			.card {
+				width: 100%;
+			}
+		}
+	}
+	.role {
+		padding: 12px;
+	}
+	.contacts {
+		&__info {
+			flex-direction: column;
+			&-left {
+				margin-bottom: 24px;
+				font-size: 24px;
+			}
+			&-right {
+				margin-left: 0;
+			}
+			&-offer {
+				font-size: 42px;
+			}
+		}
+	}
+	.footer {
+		&__inner {
+			padding: 80px 0 60px;
+			flex-direction: column;
+			div {
+				width: 100%;
+			}
+		}
+	}
+}
