--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,10 @@ body {
   color: #faf0b5;
   background-color: #000000;
 }
+body *::selection {
+  color: #000000;
+  background-color: #faf0b5;
+}
 
 .container {
   max-width: 1170px;
@@ -1399,10 +1403,6 @@ body {
 .header {
   border-bottom: 2px solid rgba(250, 240, 181, 0.5);
 }
-.header *::selection {
-  color: #000000;
-  background-color: #faf0b5;
-}
 .header__inner {
   display: flex;
   min-height: 120px;
@@ -1451,10 +1451,6 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
 }
-.main__title::selection {
-  color: #000000;
-  background-color: #faf0b5;
-}
 
 .card {
   position: relative;
@@ -1476,16 +1472,6 @@ body {
   font-weight: 700;
 }
 
-#typing-area::selection,
-.typed-cursor::selection {
-  color: #000000;
-  background-color: #faf0b5;
-}
-
-.roles *::selection {
-  color: #000000;
-  background-color: #faf0b5;
-}
 .roles__inner {
   padding: 35px 0;
 }
@@ -1533,10 +1519,6 @@ body {
   line-height: 30px;
 }
 
-.contacts *::selection {
-  color: #000000;
-  background-color: #faf0b5;
-}
 .contacts__inner {
   padding: 35px 0 120px;
 }
@@ -1625,10 +1607,6 @@ body {
 
 .footer {
   border-top: 2px solid rgba(250, 240, 181, 0.5);
-}
-.footer *::selection {
-  color: #000000;
-  background-color: #faf0b5;
 }
 .footer__inner {
   display: flex;
