--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,4 +6,6 @@ $shady-main-color: rgba(250, 240, 181, 0.5);
 $background-color: rgba(238, 237, 228, 0.02);
 
 $white: #fff;
-$black: #000000;
+$black: #000;
+
+$gap: 24px;
