Add promo section

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -83,6 +83,19 @@ body {
 	}
 }
 
+@mixin section-liquid-title {
+	padding: 170px 0 56px;
+	font-size: 64px;
+	@include title-font;
+	@media (max-width: 1199px) {
+		padding: 80px 0 48px;
+		font-size: 60px;
+	}
+	@media (max-width: 600px) {
+		font-size: 40px;
+	}
+}
+
 @mixin section-subtitle {
 	font-size: 36px;
 	@include title-font;
@@ -115,6 +128,7 @@ body {
 }
 
 @mixin section-info {
+	margin-bottom: $step;
 	font-size: 29px;
 	line-height: 37px;
 }
