--- a/css/style.css
+++ b/css/style.css
@@ -1737,7 +1737,6 @@ body *::selection {
   }
 }
 .role__info {
-  font-size: 20px;
   line-height: 30px;
 }
 
@@ -1761,6 +1760,7 @@ body *::selection {
 }
 .partners-contacts__info-left {
   min-width: 420px;
+  margin-bottom: 36px;
   font-size: 29px;
   line-height: 37px;
 }
@@ -1870,6 +1870,11 @@ body *::selection {
     font-size: 60px;
   }
 }
+@media (max-width: 600px) {
+  .main__title {
+    font-size: 40px;
+  }
+}
 .main__divider {
   width: 66%;
   margin: 0 auto;
@@ -1917,6 +1922,64 @@ body *::selection {
   align-items: center;
 }
 
+.promo__inner {
+  padding: 35px 0;
+}
+.promo__title {
+  padding: 170px 0 56px;
+  font-size: 64px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+}
+@media (max-width: 1199px) {
+  .promo__title {
+    padding: 80px 0 48px;
+    font-size: 60px;
+  }
+}
+@media (max-width: 600px) {
+  .promo__title {
+    font-size: 40px;
+  }
+}
+.promo__info {
+  max-width: 610px;
+  margin-bottom: 36px;
+  font-size: 29px;
+  line-height: 37px;
+}
+.promo__items {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+.promo__item {
+  width: calc(50% - 12px);
+}
+.promo__item-top {
+  display: flex;
+  min-height: 124px;
+  margin-bottom: 36px;
+}
+.promo__item svg {
+  flex: 0 0 64px;
+  height: 64px;
+  margin-right: 6px;
+}
+.promo__item-title {
+  font-size: 36px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+}
+@media (max-width: 900px) {
+  .promo__item-title {
+    font-size: 24px;
+  }
+}
+.promo__item-text {
+  line-height: 30px;
+}
+
 .contacts__inner {
   padding: 35px 0 120px;
 }
@@ -1934,7 +1997,7 @@ body *::selection {
 }
 .contacts__info {
   max-width: 480px;
-  margin-bottom: 28px;
+  margin-bottom: 36px;
   font-size: 29px;
   line-height: 37px;
 }
@@ -2115,6 +2178,14 @@ body *::selection {
   .main__inner {
     flex-direction: column-reverse;
   }
+
+  .promo__item-top {
+    min-height: 85px;
+  }
+  .promo__item svg {
+    flex-basis: 42px;
+    height: 42px;
+  }
 }
 @media (max-width: 600px) {
   .logo {
@@ -2205,7 +2276,7 @@ body *::selection {
     margin-right: 5px;
   }
 
-  .main__title {
-    font-size: 40px;
+  .promo__item {
+    width: 100%;
   }
 }
