--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,20 @@ body *::selection {
   color: #000;
   background-color: #faf0b5;
 }
+body::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/space.jpg");
+  background-position: center center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  filter: grayscale(100%) brightness(45%);
+  z-index: -1;
+}
 
 .container {
   max-width: 1170px;
