--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -66,6 +66,20 @@ body {
 	* {
 		@include selection;
 	}
+	&::before {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-image: url('../images/space.jpg');
+		background-position: center center;
+		background-size: contain;
+		background-repeat: no-repeat;
+		filter: grayscale(100%) brightness(45%);
+		z-index: -1;
+	}
 }
 
 @mixin title-font {
